Bug 285406 - VPN's fonts are grayed out even after successful connection
Summary: VPN's fonts are grayed out even after successful connection
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Plasma Widget (other bugs)
Version First Reported In: 0.9
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-31 16:41 UTC by Nikos Papas
Modified: 2012-01-25 19:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos Papas 2011-10-31 16:41:02 UTC
Version:           0.9 (using KDE 4.7.2) 
OS:                Linux

This is nothing serious, but it would be nice to have it fixed. Before I create a VPN connection, the widget shows on the left side the VPN label and the status "Not connected" in gray fonts; this makes sense as the connection is inactive.

However, once a connection is established, the fonts should become black, showing that the connection is active. Nevertheless, after a successful connection the fonts remain gray.

Also, maybe the VPN label "Virtual Private Network" should always be black regardless of the state of connection?

Reproducible: Always

Steps to Reproduce:
create a VPN connection

Actual Results:  
the fonts remain gray

Expected Results:  
the fonts should be black
Comment 1 Lamarque V. Souza 2011-10-31 21:22:47 UTC
Git commit 0b5fe86b5d1daf68440ae6a5cf980b9ecc03649f by Lamarque V. Souza.
Committed on 31/10/2011 at 22:21.
Pushed by lvsouza into branch 'master'.

Enable VPN Interface item in activating and activated connection states.

BUG: 285406

M  +1    -0    applet/vpninterfaceitem.cpp

http://commits.kde.org/networkmanagement/0b5fe86b5d1daf68440ae6a5cf980b9ecc03649f
Comment 2 Lamarque V. Souza 2011-10-31 21:24:08 UTC
Git commit b9de431f4187d628b309b34a349557031c25a5da by Lamarque V. Souza.
Committed on 31/10/2011 at 22:21.
Pushed by lvsouza into branch 'nm09'.

Enable VPN Interface item in activating and activated connection states.

BUG: 285406
(cherry picked from commit 0b5fe86b5d1daf68440ae6a5cf980b9ecc03649f)

M  +1    -0    applet/vpninterfaceitem.cpp

http://commits.kde.org/networkmanagement/b9de431f4187d628b309b34a349557031c25a5da
Comment 3 Nikos Papas 2012-01-25 19:14:22 UTC
I can confirm this is fixed in 4.8, thanks!