Enable VPN Interface item in activating and activated connection states.

BUG: 285406
(cherry picked from commit 0b5fe86b5d1daf68440ae6a5cf980b9ecc03649f)